# digital-lab-coach

./: .gitignore  README.md  pyproject.toml
data/sample_circuits/30_buggy_benchmark/bug1_meaningless_mux_in3/: tier3_calculator.dig
data/sample_circuits/tier1_buggy/: combinational_loop.dig  dangling_input.dig  multi_driver.dig  width_mismatch.dig
data/sample_circuits/tier1_minimal/: comparator_4bit.dig  five_inputand.dig  four_inputand.dig  full_adder.dig  half_adder.dig  mux_2to1.dig  register_test.dig  single_and.dig  single_nand.dig  six_inputand.dig  splitter_test.dig  three_inputand.dig  tunnel_test.dig
data/sample_circuits/tier2_structured/: subcircuit_inner.dig  two_subcircuits.dig  uses_nested.dig  uses_subcircuit.dig
data/sample_circuits/tier2_structured/subs/: nested_inner.dig
data/sample_circuits/tier3_realistic/: bool_unit.dig  tier3_calculator.dig
dlc/facts/: splitter.py  width.py
dlc/parser/: dig_parser.py  graph.py  models.py  netlist.py  pin_geometry.py
docs/: digital_notes.md  function_plan.md  test_notes.md
tests/: test_facts_splitter.py  test_facts_widths.py  test_graph.py  test_netlist.py  test_parser.py  test_pin_geometry.py
